[package]
name = "mdns"
version = "1.1.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = """
A multicast DNS client library.

Supports discovery of any mDNS device on a LAN.
"""

license = "MIT"
documentation = "https://docs.rs/mdns"
repository = "https://github.com/dylanmckay/mdns"

categories = ["network-programming"]
keywords = ["mdns", "dns", "multicast", "chromecast", "discovery"]

[dependencies]
log = "*"
dns-parser = "0.8.0"
net2 = "0.2"
err-derive = "0.2.3"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.2"
tokio = { version = "0.2", features = ["time", "udp", "stream"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core"] }
